le foto continuano a non funzionare. Abbiamo aggiunto l'inserimento del prodotto che non funziona, in quuanto bisogna risolvere la questione dell'inserimento delle foto

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 </welcome-file-list>
   <servlet>
     <servlet-name>ProductControl</servlet-name>
-    <servlet-class>main.javas.filter.ProductControl</servlet-class>
+    <servlet-class>main.javas.control.ProductControl</servlet-class>
   </servlet>
 
   <servlet-mapping>
