abbiamo implementato la differenza tra admin e utente. Bisogna implementare le funzioni dell'admin

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,16 @@
   </servlet>
 
   <servlet>
+    <servlet-name>DetailControl</servlet-name>
+    <servlet-class>main.javas.control.DetailControl</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>DetailControl</servlet-name>
+    <url-pattern>/detail</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>main.javas.control.LogInServlet</servlet-class>
   </servlet>
