Abbiamo implementato, dal lato admin, la lista degli ordini e la lista degli utenti. Poi abbiamo implementato, con js, l'aggiornamento della pagina dei dettagli per quanto riguarda le foto al cambiamento della personalizzazione del prodotto

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,6 +37,16 @@
     <url-pattern>/product</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>OrderServlet</servlet-name>
+    <servlet-class>main.javas.control.OrderServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>OrderServlet</servlet-name>
+    <url-pattern>/OrderServlet</url-pattern>
+  </servlet-mapping>
+
   <filter>
     <filter-name>LoginFilter</filter-name>
     <filter-class>main.javas.control.LoginFilter</filter-class>
