--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,9 +41,24 @@
     <filter-name>LoginFilter</filter-name>
     <filter-class>main.javas.control.User.LoginFilter</filter-class>
   </filter>
+
   <filter-mapping>
     <filter-name>LoginFilter</filter-name>
     <url-pattern>/LogIn.jsp</url-pattern>
   </filter-mapping>
 
+  <error-page>
+    <error-code>404</error-code>
+    <location>/main/webapp/errorPages/error404.jsp</location>
+  </error-page>
+
+  <error-page>
+    <error-code>500</error-code>
+    <location>/errorPages/error500.jsp</location>
+  </error-page>
+
+  <error-page>
+    <exception-type>java.sql.SQLException</exception-type>
+    <location>/errorPages/SQLException.jsp</location>
+  </error-page>
 </web-app>
