Ho sistemato definitivamente DetailProductPage.jsp

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 
   <servlet-mapping>
     <servlet-name>AddToCartServlet</servlet-name>
-    <url-pattern>/AddToCardServlet</url-pattern>
+    <url-pattern>/AddToCartServlet</url-pattern>
   </servlet-mapping>
 
   <servlet>
