--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
                              http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
   <welcome-file-list>
-    <welcome-file>ProductView.jsp</welcome-file>
+    <welcome-file>HomePage.jsp</welcome-file>
   </welcome-file-list>
 
   <servlet>
@@ -227,16 +227,6 @@
   <servlet-mapping>
     <servlet-name>SearchServlet</servlet-name>
     <url-pattern>/SearchServlet</url-pattern>
-  </servlet-mapping>
-
-  <servlet>
-    <servlet-name>UpdatePasswordServlet</servlet-name>
-    <servlet-class>main.javas.control.User.UpdatePasswordServlet</servlet-class>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>UpdatePasswordServlet</servlet-name>
-    <url-pattern>/UpdatePasswordServlet</url-pattern>
   </servlet-mapping>
 
   <servlet>
